Adapt to 7.x