@@ -25,6 +25,7 @@ import org.junit.Before;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
 import java.util.Base64;
 import java.util.HashMap;
 import java.util.List;
@@ -41,12 +42,12 @@ public class MlHiddenIndicesFullClusterRestartIT extends AbstractFullClusterRest
 
     private static final String JOB_ID = "ml-hidden-indices-old-cluster-job";
     private static final List<Tuple<List<String>, String>> EXPECTED_INDEX_ALIAS_PAIRS =
-        List.of(
-            Tuple.tuple(List.of(".ml-annotations-6"), ".ml-annotations-read"),
-            Tuple.tuple(List.of(".ml-annotations-6"), ".ml-annotations-write"),
-            Tuple.tuple(List.of(".ml-state", ".ml-state-000001"), ".ml-state-write"),
-            Tuple.tuple(List.of(".ml-anomalies-shared"), ".ml-anomalies-" + JOB_ID),
-            Tuple.tuple(List.of(".ml-anomalies-shared"), ".ml-anomalies-.write-" + JOB_ID)
+        Arrays.asList(
+            Tuple.tuple(Arrays.asList(".ml-annotations-6"), ".ml-annotations-read"),
+            Tuple.tuple(Arrays.asList(".ml-annotations-6"), ".ml-annotations-write"),
+            Tuple.tuple(Arrays.asList(".ml-state", ".ml-state-000001"), ".ml-state-write"),
+            Tuple.tuple(Arrays.asList(".ml-anomalies-shared"), ".ml-anomalies-" + JOB_ID),
+            Tuple.tuple(Arrays.asList(".ml-anomalies-shared"), ".ml-anomalies-.write-" + JOB_ID)
         );
 
     @Override
